# chip8

./: .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  ROADMAP.md  TODO.md  build.rs  format.py  lint.py  rust-toolchain.toml
.cargo/: config
.circleci/: config.yml
.github/actions/prepare/: action.yml
.github/workflows/: format.yml  lint.yml  rust.yml  test.yml
chip8-core/: Cargo.toml
chip8-core/src/: cartridge.rs  lib.rs  types.rs
chip8-core/src/cpu/: font.rs  memory.rs  mod.rs  opcodes.rs  registers.rs  stack.rs  timer.rs  types.rs  video.rs
chip8-cpu/: Cargo.toml
chip8-cpu/src/: breakpoints.rs  cartridge.rs  cpu.rs  debugger.rs  font.rs  input.rs  lib.rs  logger.rs  macros.rs  memory.rs  opcodes.rs  peripherals.rs  registers.rs  savestate.rs  screen.rs  shell.rs  stack.rs  timer.rs  types.rs  video.rs
chip8-cpu/src/cpu/: font.rs  memory.rs  mod.rs  opcodes.rs  registers.rs  stack.rs  timer.rs  video.rs
chip8-device/: Cargo.toml
chip8-device/src/: lib.rs  shell.rs
chip8-graphics/: Cargo.toml
chip8-graphics/src/: lib.rs  renderer.rs
crates/chip8-cli/: Cargo.toml
crates/chip8-cli/src/: main.rs
crates/chip8-core/: Cargo.toml
crates/chip8-core/src/: drivers.rs  emulator.rs  lib.rs
crates/chip8-core/src/core/: assembler.rs  cpu.rs  font.rs  logger.rs  macros.rs  math.rs  mod.rs  opcodes.rs  registers.rs  savestate.rs  stack.rs  timer.rs
crates/chip8-core/src/debugger/: breakpoints.rs  context.rs  errors.rs  mod.rs  stream.rs
crates/chip8-core/src/peripherals/: cartridge.rs  input.rs  memory.rs  mod.rs  screen.rs  sound.rs
crates/chip8-drivers/: Cargo.toml
crates/chip8-drivers/src/: lib.rs  mq_driver.rs  pixels_driver.rs  usfx_driver.rs  winit_driver.rs
crates/chip8-gui/: Cargo.toml
crates/chip8-gui/src/: draw.rs  frame.rs  input.rs  main.rs  scene.rs
crates/chip8-gui/src/frames/: code.rs  debug_info.rs  game.rs  keyboard.rs  list.rs  memory.rs  mod.rs  shell.rs  status.rs  title.rs
crates/chip8-gui/src/scenes/: debug.rs  explorer.rs  game.rs  mod.rs
crates/chip8-gui/src/window/: draw.rs  font.rs  mod.rs
crates/chip8-gui/src/window/frames/: code_frame.rs  debug_info_frame.rs  keyboard_frame.rs  memory_frame.rs  mod.rs  shell_frame.rs  title_frame.rs
crates/chip8-gui/src/window/scenes/: debug_scene.rs
games/ASSEMBLY/: TEST.ch8s
src/: breakpoints.rs  cartridge.rs  cpu.rs  debugger.rs  device.rs  emulator.rs  error.rs  font.rs  input.rs  lib.rs  logger.rs  macros.rs  main.rs  memory.rs  opcodes.rs  peripherals.rs  registers.rs  savestate.rs  screen.rs  shell.rs  stack.rs  timer.rs  types.rs
src/core/: assembler.rs  cpu.rs  error.rs  font.rs  logger.rs  macros.rs  math.rs  mod.rs  opcodes.rs  registers.rs  savestate.rs  stack.rs  timer.rs  types.rs
src/debugger/: _debugger.rs  breakpoints.rs  context.rs  errors.rs  mod.rs  savestate.rs  stream.rs
src/drivers/: mod.rs  pixels_driver.rs  winit_driver.rs
src/peripherals/: _peripherals.rs  cartridge.rs  input.rs  memory.rs  mod.rs  screen.rs
src/window/: _window.rs  app.rs  constants.rs  draw.rs  font.rs  frame.rs  mod.rs  scene.rs  scenemanager.rs
src/window/frames/: code_frame.rs  debug_info_frame.rs  game_frame.rs  keyboard_frame.rs  list_frame.rs  memory_frame.rs  mod.rs  shell_frame.rs  status_frame.rs  title_frame.rs
src/window/scenes/: debug_scene.rs  explorer_scene.rs  game_scene.rs  home_scene.rs  mod.rs
tests/: play_test.rs  test_assembler.rs  test_play.rs  window_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
