[package]
name = "chip8"
version = "0.14.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"
resolver = "2"
publish = false

[dependencies]
bincode = "1.1"
chrono = "0.4"
lazy_static = "1.2"
log = "0.4"
num = "0.2"
rand = "0.6"
regex = "1"
rustyline = "5.0.2"
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3.7"
time = "0.1"
walkdir = "2.2.7"
winit = "0.25.0"
pixels = "0.6.0"
egui = "0.14.2"
egui_wgpu_backend = "0.12.0"
egui_winit_platform = "0.10.0"
winit_input_helper = "0.10.0"
env_logger = "0.9.0"
argh = "0.1.6"
