[package]
name = "chip8-device"
version = "0.1.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]

[dependencies]
chip8-core = { path = "../chip8-core" }
chip8-cpu = { path = "../chip8-cpu" }

sdl2 = "0.31"
time = "0.1"
clap = "2.29"
log = "0.3"
fern = "0.4"
chrono = "0.4"
crossbeam = "0.3"