[package]
name = "chip8-core"
version = "0.14.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
chrono = "0.4"
lazy_static = "1.2"
log = "0.4"
num = "0.2"
rand = "0.6"
regex = "1"
rustyline = "5.0.2"
serde = "1.0"
serde_derive = "1.0"
tempdir = "0.3.7"
time = "0.1"
walkdir = "2.2.7"
