[package]
name = "chip8-core"
version = "0.14.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"

[dependencies]
nanoserde = "0.1.29"
num-integer = "0.1.44"
once_cell = "1.8.0"
quad-rand = "0.2.1"
regex = { version = "1.5.4", features = ["std"], default-features = false }
rustyline = { version = "9.0.0", default-features = false }
tracing = "0.1.29"
walkdir = "2.3.2"
