[package]
name = "chip8-gui"
version = "0.14.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"
resolver = "2"
publish = false

[dependencies]
chip8-core = { path = "../chip8-core" }
chip8-drivers = { path = "../chip8-drivers" }
egui = "0.14.2"
egui_wgpu_backend = "0.12.0"
egui_winit_platform = "0.10.0"
