[package]
name = "chip8-gui"
version = "0.14.0"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
edition = "2018"
resolver = "2"
publish = false

[dependencies]
chip8-core = { path = "../chip8-core" }
chip8-drivers = { path = "../chip8-drivers" }
macroquad = "0.3.10"
wgpu = "0.10.1"
wgpu_glyph = "0.14.1"
